@@ -3,33 +3,32 @@ package org.opentripplanner.ext.vectortiles.layers.stops;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.opentripplanner.common.model.T2;
 import org.opentripplanner.ext.vectortiles.PropertyMapper;
-import org.opentripplanner.model.Stop;
-import org.opentripplanner.model.TripPattern;
-import org.opentripplanner.routing.graph.Graph;
-import org.opentripplanner.routing.vertextype.TransitStopVertex;
+import org.opentripplanner.transit.model.network.TripPattern;
+import org.opentripplanner.transit.model.site.RegularStop;
+import org.opentripplanner.transit.service.TransitService;
 
-public class DigitransitStopPropertyMapper extends PropertyMapper<TransitStopVertex> {
+public class DigitransitStopPropertyMapper extends PropertyMapper<RegularStop> {
 
-  private final Graph graph;
+  private final TransitService transitService;
 
-  private DigitransitStopPropertyMapper(Graph graph) {
-    this.graph = graph;
+  private DigitransitStopPropertyMapper(TransitService transitService) {
+    this.transitService = transitService;
   }
 
-  public static DigitransitStopPropertyMapper create(Graph graph) {
-    return new DigitransitStopPropertyMapper(graph);
+  public static DigitransitStopPropertyMapper create(TransitService transitService) {
+    return new DigitransitStopPropertyMapper(transitService);
   }
 
   @Override
-  public Collection<T2<String, Object>> map(TransitStopVertex input) {
-    Stop stop = input.getStop();
-    Collection<TripPattern> patternsForStop = graph.index.getPatternsForStop(stop);
+  public Collection<T2<String, Object>> map(RegularStop stop) {
+    Collection<TripPattern> patternsForStop = transitService.getPatternsForStop(stop);
 
     String type = patternsForStop
       .stream()
@@ -42,36 +41,31 @@ public class DigitransitStopPropertyMapper extends PropertyMapper<TransitStopVer
       .map(Enum::name)
       .orElse(null);
 
-    String patterns = JSONArray.toJSONString(
-      patternsForStop
+    String routes = JSONArray.toJSONString(
+      transitService
+        .getRoutesForStop(stop)
         .stream()
-        .map(tripPattern -> {
-          int stopPos = tripPattern.findStopPosition(stop);
-          var headsign = stopPos < 0
-            ? "Not Available"
-            : tripPattern.getScheduledTimetable().getTripTimes().get(0).getHeadsign(stopPos);
-          JSONObject pattern = new JSONObject();
-          pattern.put("headsign", headsign);
-          pattern.put("type", tripPattern.getRoute().getMode().name());
-          pattern.put("shortName", tripPattern.getRoute().getShortName());
-          return pattern;
+        .map(route -> {
+          JSONObject routeObject = new JSONObject();
+          routeObject.put("gtfsType", route.getGtfsType());
+          return routeObject;
         })
-        .collect(Collectors.toList())
+        .toList()
     );
-
+    String desc = stop.getDescription() != null ? stop.getDescription().toString() : null;
     return List.of(
       new T2<>("gtfsId", stop.getId().toString()),
       // Name is I18NString now, we return default name
       new T2<>("name", stop.getName().toString()),
       new T2<>("code", stop.getCode()),
       new T2<>("platform", stop.getPlatformCode()),
-      new T2<>("desc", stop.getDescription()),
+      new T2<>("desc", desc),
       new T2<>(
         "parentStation",
         stop.getParentStation() != null ? stop.getParentStation().getId() : "null"
       ),
       new T2<>("type", type),
-      new T2<>("patterns", patterns)
+      new T2<>("routes", routes)
     );
   }
 }
