@@ -6,6 +6,7 @@ import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.opentripplanner.gtfs.GtfsContextBuilder.contextBuilder;
+import static org.opentripplanner.transit.model._data.TransitModelForTest.FEED_ID;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -15,25 +16,22 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.opentripplanner.ConstantsForTests;
 import org.opentripplanner.gtfs.GtfsContextBuilder;
-import org.opentripplanner.model.Agency;
-import org.opentripplanner.model.FareAttribute;
-import org.opentripplanner.model.FareRule;
 import org.opentripplanner.model.FeedInfo;
-import org.opentripplanner.model.FeedScopedId;
 import org.opentripplanner.model.OtpTransitService;
-import org.opentripplanner.model.Pathway;
 import org.opentripplanner.model.ShapePoint;
-import org.opentripplanner.model.Station;
-import org.opentripplanner.model.Stop;
-import org.opentripplanner.model.StopLocation;
 import org.opentripplanner.model.StopTime;
-import org.opentripplanner.model.Trip;
+import org.opentripplanner.transit.model._data.TransitModelForTest;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.model.organization.Agency;
+import org.opentripplanner.transit.model.site.Pathway;
+import org.opentripplanner.transit.model.site.RegularStop;
+import org.opentripplanner.transit.model.site.Station;
+import org.opentripplanner.transit.model.site.StopLocation;
+import org.opentripplanner.transit.model.timetable.Trip;
 
 public class OtpTransitServiceImplTest {
 
-  private static final String FEED_ID = "Z";
-
-  private static final FeedScopedId STATION_ID = new FeedScopedId(FEED_ID, "station");
+  private static final FeedScopedId STATION_ID = TransitModelForTest.id("station");
 
   // The subject is used as read only; hence static is ok
   private static OtpTransitService subject;
@@ -44,9 +42,6 @@ public class OtpTransitServiceImplTest {
     OtpTransitServiceBuilder builder = contextBuilder.getTransitBuilder();
 
     // Supplement test data with at least one entity in all collections
-    FareRule rule = createFareRule();
-    builder.getFareAttributes().add(rule.getFare());
-    builder.getFareRules().add(rule);
     builder.getFeedInfos().add(FeedInfo.dummyForTest(FEED_ID));
 
     subject = builder.build();
@@ -63,30 +58,11 @@ public class OtpTransitServiceImplTest {
   }
 
   @Test
-  public void testGetAllFareAttributes() {
-    Collection<FareAttribute> fareAttributes = subject.getAllFareAttributes();
-
-    assertEquals(1, fareAttributes.size());
-    assertEquals("<FareAttribute Z:FA>", first(fareAttributes).toString());
-  }
-
-  @Test
-  public void testGetAllFareRules() {
-    Collection<FareRule> fareRules = subject.getAllFareRules();
-
-    assertEquals(1, fareRules.size());
-    assertEquals(
-      "<FareRule  origin='Zone A' contains='Zone B' destination='Zone C'>",
-      first(fareRules).toString()
-    );
-  }
-
-  @Test
   public void testGetAllFeedInfos() {
     Collection<FeedInfo> feedInfos = subject.getAllFeedInfos();
 
     assertEquals(1, feedInfos.size());
-    assertEquals("<FeedInfo Z>", first(feedInfos).toString());
+    assertEquals("FeedInfo{F}", first(feedInfos).toString());
   }
 
   @Test
@@ -94,7 +70,7 @@ public class OtpTransitServiceImplTest {
     Collection<Pathway> pathways = subject.getAllPathways();
 
     assertEquals(3, pathways.size());
-    assertEquals("<Pathway Z:pathways_1_1>", first(pathways).toString());
+    assertEquals("Pathway{F:pathways_1_1}", first(pathways).toString());
   }
 
   @Test
@@ -104,31 +80,32 @@ public class OtpTransitServiceImplTest {
     );
 
     assertEquals(
-      "ConstrainedTransfer{from: <Route 2, stop D>, to: <Route 5, stop I>, constraint: {guaranteed}}\n" +
-      "ConstrainedTransfer{from: <Stop F>, to: <Stop E>, constraint: {minTransferTime: 20m}}\n" +
-      "ConstrainedTransfer{from: <Stop K>, to: <Stop L>, constraint: {priority: RECOMMENDED}}\n" +
-      "ConstrainedTransfer{from: <Stop K>, to: <Stop M>, constraint: {priority: NOT_ALLOWED}}\n" +
-      "ConstrainedTransfer{from: <Stop L>, to: <Stop K>, constraint: {priority: RECOMMENDED}}\n" +
-      "ConstrainedTransfer{from: <Stop M>, to: <Stop K>, constraint: {priority: NOT_ALLOWED}}\n" +
-      "ConstrainedTransfer{from: <Trip 1.1, stopPos 1>, to: <Trip 2.2, stopPos 0>, constraint: {guaranteed}}",
+      """
+        ConstrainedTransfer{from: RouteTP{2, stop D}, to: RouteTP{5, stop I}, constraint: {guaranteed}}
+        ConstrainedTransfer{from: StopTP{F}, to: StopTP{E}, constraint: {minTransferTime: 20m}}
+        ConstrainedTransfer{from: StopTP{K}, to: StopTP{L}, constraint: {priority: RECOMMENDED}}
+        ConstrainedTransfer{from: StopTP{K}, to: StopTP{M}, constraint: {priority: NOT_ALLOWED}}
+        ConstrainedTransfer{from: StopTP{L}, to: StopTP{K}, constraint: {priority: RECOMMENDED}}
+        ConstrainedTransfer{from: StopTP{M}, to: StopTP{K}, constraint: {priority: NOT_ALLOWED}}
+        ConstrainedTransfer{from: TripTP{1.1, stopPos 1}, to: TripTP{2.2, stopPos 0}, constraint: {guaranteed}}""",
       result
     );
   }
 
   @Test
   public void testGetAllStations() {
-    Collection<Station> stations = subject.getAllStations();
+    Collection<Station> stations = subject.stopModel().listStations();
 
     assertEquals(1, stations.size());
-    assertEquals("<Station Z:station>", first(stations).toString());
+    assertEquals("Station{F:station station}", first(stations).toString());
   }
 
   @Test
   public void testGetAllStops() {
-    Collection<Stop> stops = subject.getAllStops();
+    Collection<RegularStop> stops = subject.stopModel().listRegularStops();
 
     assertEquals(22, stops.size());
-    assertEquals("<Stop Z:A>", first(stops).toString());
+    assertEquals("RegularStop{F:A A}", first(stops).toString());
   }
 
   @Test
@@ -140,7 +117,7 @@ public class OtpTransitServiceImplTest {
 
     assertEquals(80, stopTimes.size());
     assertEquals(
-      "StopTime(seq=1 stop=Z:A trip=agency:1.1 times=00:00:00-00:00:00)",
+      "StopTime(seq=1 stop=F:A trip=agency:1.1 times=00:00:00-00:00:00)",
       first(stopTimes).toString()
     );
   }
@@ -150,27 +127,29 @@ public class OtpTransitServiceImplTest {
     Collection<Trip> trips = subject.getAllTrips();
 
     assertEquals(33, trips.size());
-    assertEquals("<Trip agency:1.1>", first(trips).toString());
+    assertEquals("Trip{agency:1.1 1}", first(trips).toString());
   }
 
   @Test
   public void testGetStopForId() {
-    Stop stop = subject.getStopForId(new FeedScopedId("Z", "P"));
-    assertEquals("<Stop Z:P>", stop.toString());
+    RegularStop stop = subject.stopModel().getRegularStop(TransitModelForTest.id("P"));
+    assertEquals("RegularStop{F:P P}", stop.toString());
   }
 
   @Test
   public void testGetStopsForStation() {
-    List<StopLocation> stops = new ArrayList<>(subject.getStationForId(STATION_ID).getChildStops());
-    assertEquals("[<Stop Z:A>]", stops.toString());
+    List<StopLocation> stops = new ArrayList<>(
+      subject.stopModel().getStationById(STATION_ID).getChildStops()
+    );
+    assertEquals("[RegularStop{F:A A}]", stops.toString());
   }
 
   @Test
   public void testGetShapePointsForShapeId() {
-    List<ShapePoint> shapePoints = subject.getShapePointsForShapeId(new FeedScopedId("Z", "5"));
+    List<ShapePoint> shapePoints = subject.getShapePointsForShapeId(TransitModelForTest.id("5"));
     assertEquals(
       "[#1 (41,-72), #2 (41,-72), #3 (40,-72), #4 (41,-73), #5 (41,-74)]",
-      shapePoints.stream().map(OtpTransitServiceImplTest::toString).collect(toList()).toString()
+      shapePoints.stream().map(OtpTransitServiceImplTest::toString).toList().toString()
     );
   }
 
@@ -178,8 +157,8 @@ public class OtpTransitServiceImplTest {
   public void testGetStopTimesForTrip() {
     List<StopTime> stopTimes = subject.getStopTimesForTrip(first(subject.getAllTrips()));
     assertEquals(
-      "[<Stop Z:A>, <Stop Z:B>, <Stop Z:C>]",
-      stopTimes.stream().map(StopTime::getStop).collect(toList()).toString()
+      "[RegularStop{F:A A}, RegularStop{F:B B}, RegularStop{F:C C}]",
+      stopTimes.stream().map(StopTime::getStop).toList().toString()
     );
   }
 
@@ -188,7 +167,7 @@ public class OtpTransitServiceImplTest {
     Collection<FeedScopedId> serviceIds = subject.getAllServiceIds();
 
     assertEquals(2, serviceIds.size());
-    assertEquals("Z:alldays", first(serviceIds).toString());
+    assertEquals("F:alldays", first(serviceIds).toString());
   }
 
   @Test
@@ -196,18 +175,8 @@ public class OtpTransitServiceImplTest {
     assertTrue(subject.hasActiveTransit());
   }
 
-  private static FareRule createFareRule() {
-    FareAttribute fa = new FareAttribute(new FeedScopedId(FEED_ID, "FA"));
-    FareRule rule = new FareRule();
-    rule.setOriginId("Zone A");
-    rule.setContainsId("Zone B");
-    rule.setDestinationId("Zone C");
-    rule.setFare(fa);
-    return rule;
-  }
-
   private static String removeFeedScope(String text) {
-    return text.replace("agency:", "").replace("Z:", "");
+    return text.replace("agency:", "").replace(FEED_ID + ":", "");
   }
 
   private static <T> List<T> sort(Collection<? extends T> c) {
